# bassma

simulation/: .gitignore  CMakeLists.txt  README.TXT
simulation/cmake/: Cmds.cmake  CopyCmds.cmake  FindGtest.cmake  OGRECMakeHelper.cmake
simulation/config/: plugins.cfg
simulation/media/: court.pk3
simulation/media/court/maps/: court.bsp  court.map  court.prt  court.srf
simulation/src/: BallDetector.cpp  BallDetector.h  CMakeLists.txt  CruiseControl.h  Detector.h  IrrlichtHelloWorld.cpp  IrrlichtQuake3Map.cpp  IrrlichtRenderer.cpp  IrrlichtRenderer.h  IrrlichtSimulator.cpp  IrrlichtSimulator.h  OpenCVWebcam.cpp  OpenCVWebcam.h  OpenGLWindow.cpp  OpenGLWindow.h  QIrrlichtWidget.cpp  QIrrlichtWidget.h  QOpenCVWebcamWidget.cpp  QOpenCVWebcamWidget.h  QOpenCVWidget.cpp  QOpenCVWidget.h  QSimulator.cpp  QSimulator.h  QSimulator.ui  Units.h  VideoSource.h  simulation.cpp  simulator.cpp  simulatorgui.cpp
simulation/src/examples/: CMakeLists.txt  main.cpp
simulation/src/examples/irrlicht/: CMakeLists.txt  IrrlichtBullet.cpp  IrrlichtQuake3Map.cpp
simulation/src/examples/ogre/: CMakeLists.txt  TutorialApplication.cpp
simulation/src/examples/qt/: CMakeLists.txt
simulation/src/gui/: CMakeLists.txt  CPhysics.cpp  QBallDetector.cpp  QBallDetector.h  QBallDetector.ui  QIrrlichtWidget.cpp  QIrrlichtWidget.h  QOpenCVWebcamWidget.cpp  QOpenCVWebcamWidget.h  QSimulation.cpp  QSimulation.h  QSimulation.ui  QSimulator.cpp  QSimulator.h  QSimulator.ui  simulatorgui.cpp
simulation/src/irrlicht/: CMakeLists.txt
simulation/src/ogre/: CMakeLists.txt
simulation/src/qt/: CMakeLists.txt  MyClass.cpp  MyClass.h  qtexample.cpp
simulation/src/test/: CMakeLists.txt
vision/: CMakeLists.txt  README.TXT
vision/cmake/: Cmds.cmake  GTestCmds.cmake
vision/data/: brightness_contrast_variations.sh  color_to_alpha.sh  crop_by_color.sh
vision/src/: CMakeLists.txt  facedetect.cpp  facedetect2.cpp  simple.cpp
vision/src/test/: CMakeLists.txt
